--- a/src/app/helpers.scss
+++ b/src/app/helpers.scss
@@ -4,6 +4,10 @@
   color: $white;
 }
 
+.color--black {
+  color: $black;
+}
+
 .color--green {
   color: $green;
 }
@@ -40,6 +44,132 @@
   padding: $spacing-lg;
 }
 
+.padding--top--xs {
+  padding-top: $spacing-xs;
+}
+
+.padding--top--sm {
+  padding-top: $spacing-sm;
+}
+
+.padding--top--md {
+  padding-top: $spacing-md;
+}
+
+.padding--top--lg {
+  padding-top: $spacing-lg;
+}
+
+.padding--bottom--xs {
+  padding-bottom: $spacing-xs;
+}
+
+.padding--bottom--sm {
+  padding-bottom: $spacing-sm;
+}
+
+.padding--bottom--md {
+  padding-bottom: $spacing-md;
+}
+
+.padding--bottom--lg {
+  padding-bottom: $spacing-lg;
+}
+
+.padding--right--xs {
+  padding-right: $spacing-xs;
+}
+
+.padding--right--sm {
+  padding-right: $spacing-sm;
+}
+
+.padding--right--md {
+  padding-right: $spacing-md;
+}
+
+.padding--right--lg {
+  padding-right: $spacing-lg;
+}
+
+.padding--left--xs {
+  padding-left: $spacing-xs;
+}
+
+.padding--left--sm {
+  padding-left: $spacing-sm;
+}
+
+.padding--left--md {
+  padding-left: $spacing-md;
+}
+
+.padding--left--lg {
+  padding-left: $spacing-lg;
+}
+
+.margin--right--xs {
+  margin-right: $spacing-xs;
+}
+
+.margin--right--sm {
+  margin-right: $spacing-sm;
+}
+
+.margin--right--md {
+  margin-right: $spacing-md;
+}
+
+.margin--right--lg {
+  margin-right: $spacing-lg;
+}
+
+.margin--bottom--xs {
+  margin-bottom: $spacing-xs;
+}
+
+.margin--bottom--sm {
+  margin-bottom: $spacing-sm;
+}
+
+.margin--bottom--md {
+  margin-bottom: $spacing-md;
+}
+
+.margin--bottom--lg {
+  margin-bottom: $spacing-lg;
+}
+
 .background--almost-black {
   background-color: $almostBlack;
+}
+
+.background--grey {
+  background-color: $grey;
+}
+
+.heading--h1 {
+  font-size: $font-size--big;
+  margin: 0;
+  font-weight: bold;
+}
+
+.align--top {
+  vertical-align: middle;
+}
+
+.align--bottom {
+  vertical-align: bottom;
+}
+
+.font-weight--bold {
+  font-weight: bold;
+}
+
+.visibility--hidden {
+  visibility: hidden;
+}
+
+.visibility--visible {
+  visibility: visible;
 }
