Add client and employee view

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
     <head>
         <base href="<%- baseUrl %>">
         <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Arimo:400,700" rel="stylesheet">
         <title>Especias El Trébol</title>
     </head>
     <body>
