--- a/src/app/helpers.scss
+++ b/src/app/helpers.scss
@@ -13,19 +13,19 @@
 }
 
 .font-size--xs {
-  font-size: $font-size--small;
+  font-size: $font-size--small !important;
 }
 
 .font-size--sm {
-  font-size: $font-size--normal;
+  font-size: $font-size--normal !important;
 }
 
 .font-size--md {
-  font-size: $font-size--big;
+  font-size: $font-size--big !important;
 }
 
 .font-size--lg {
-  font-size: $font-size--jumbo;
+  font-size: $font-size--jumbo !important;
 }
 
 .padding--all--xs {
@@ -108,6 +108,22 @@
   padding-left: $spacing-lg;
 }
 
+.margin--top--xs {
+  margin-top: $spacing-xs;
+}
+
+.margin--top--sm {
+  margin-top: $spacing-sm;
+}
+
+.margin--top--md {
+  margin-top: $spacing-md;
+}
+
+.margin--top--lg {
+  margin-top: $spacing-lg;
+}
+
 .margin--right--xs {
   margin-right: $spacing-xs;
 }
@@ -149,6 +165,12 @@
 }
 
 .heading--h1 {
+  font-size: $font-size--jumbo;
+  margin: 0;
+  font-weight: bold;
+}
+
+.heading--h2 {
   font-size: $font-size--big;
   margin: 0;
   font-weight: bold;
@@ -163,7 +185,7 @@
 }
 
 .font-weight--bold {
-  font-weight: bold;
+  font-weight: bold !important;
 }
 
 .visibility--hidden {
