Update sales summary view with colors and date formatting

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -150,6 +150,14 @@ a {
   }
 }
 
+.t-number--positive {
+  color: $green;
+}
+
+.t-number--negative {
+  color: $red;
+}
+
 .t-button {
   width: 90px;
   color: $white;
