Fix styles for tablets in sales view

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <base href="<%- baseUrl %>">
+        <base href="<%- baseUrl %>" />
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Arimo:400,700" rel="stylesheet">
         <title>Especias El Trébol</title>
