--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,8 +4,67 @@
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Arimo:400,700" rel="stylesheet">
         <title>Especias El Trébol</title>
+        <style>
+            @keyframes upsizing {
+                from {width: 30px; height: 30px;}
+                to {width: 50px; height: 50px;}
+            }
+
+            body {
+                margin: 0;
+            }
+
+            .t-screen--bootstrap {
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                background-color: #f0f0f0;
+            }
+
+            .t-screen--loading__icons {
+                height: 50%;
+                width: 100%;
+                padding-top: 40%;
+            }
+
+            .t-screen--loading__square {
+                background-color: #2FC841;
+                display: inline-block;
+                width: 30px;
+                border-radius: 100%;
+                height: 30px;
+                margin: 10px;
+                animation-duration: 1s;
+                animation-iteration-count: infinite;
+                animation-direction: alternate;
+                animation-timing-function: ease;
+            }
+
+            .t-screen--loading__square#t-screen--loading__square-1 {
+                animation-name: upsizing;
+                animation-delay: 0s;
+            }
+
+            .t-screen--loading__square#t-screen--loading__square-2 {
+                animation-name: upsizing;
+                animation-delay: 0.3s;
+            }
+
+            .t-screen--loading__square#t-screen--loading__square-3 {
+                animation-name: upsizing;
+                animation-delay: 0.5s;
+            }
+        </style>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="app">
+            <div class="t-screen--bootstrap">
+                <div class="t-screen--loading__icons">
+                    <div id="t-screen--loading__square-1" class="t-screen--loading__square"></div>
+                    <div id="t-screen--loading__square-2" class="t-screen--loading__square"></div>
+                    <div id="t-screen--loading__square-3" class="t-screen--loading__square"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
