--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -3,6 +3,7 @@ $grey: #F0F0F0;
 $lightGrey: #858585;
 $darkgrey: #e0e0e0;
 $red: #DF3939;
+$lightRed: #e6baba;
 $white: #FEFEFE;
 $black: #000;
 $almostBlack: #4B4B4B;
