Add sales report view

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -167,6 +167,14 @@ a {
     }
   }
 
+  &.t-button--danger {
+    background-color: $red;
+
+    &:hover {
+      background-color: darken($red, 5);
+    }
+  }
+
   &.t-button--default {
     background-color: $lightGrey;
 
