Update view for sales landing page

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -63,6 +63,10 @@ a {
   &::placeholder {
     font-style: italic;
   }
+
+  &.t-input--small {
+    width: 200px;
+  }
 }
 
 .t-textarea {
@@ -232,6 +236,7 @@ a {
 
 .t-message {
   padding: $spacing-sm;
+  margin: $spacing-sm 0;
 
   &.t-message--error {
     border: 1px solid $red;
